# RAG

./: pyproject.toml  requirements.txt
DataIngestParsing/1.DataIngestion.ipynb/: 1.DataIngestion.ipynb
Documents/: -+Copy.env
